# core

./: .gitignore  Cargo.toml  LICENSE  Protocol.md  README.md  hole.db  log
examples/: front_client_request.json
src/: hole.db  lib.rs  main.rs
src/.fcpv2/: mod.rs
src/api/: handlers.rs  identifier.rs  mod.rs  request.rs  response.rs  selector.rs  types.rs
src/chat/: #front_conn.rs#  chat_api_base.rs  front_conn.rs  init.rs  mod.rs  serv_conn.rs  serv_handler.rs  stay_awake.rs  types.rs
src/cli/: cli_base.rs  mod.rs
src/db/: messages.rs  mod.rs  mod.rs~  types.rs  users.rs
src/encrypting/: encryption.rs
src/fcp/: mod.rs  types.rs
src/fcpv2/: mod.rs  types.rs
src/tests/: encrypting_tests.rs  mod.rs
tests/: encrypting_tests.rs
