[package]
name = "hole"
version = "0.0.1"
authors = ["horhik <horhik@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntru = "0.5.6"
rusqlite = "0.24.2"
toml = "0.5.6"
tungstenite = "0.12.0"
tokio = { version = "0.3.3", features = ["full"] }
log = "0.4.11"
futures = "0.3.6"
async-std = "1.6.5"
async-tls = "0.10.0"
futures-util = "*"
serde_json = "1.0.59"
serde = "1.0.116"
serde_derive = "1.0.116"
async-trait = "0.1.42"

[dependencies.fcpv2]
path = "../FCPv2"

[dependencies.async-tungstenite]
version = "0.11.0"
features = ["tokio-runtime", "tokio-native-tls", "async-tls", "async-std"]

