[package]
name = "hole"
version = "0.0.1"
authors = ["horhik <horhik@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntru = "0.5.6"
rusqlite = {version = "0.25.1", features = ["chrono"]}
toml = "0.5.8"
tungstenite = "0.12.0"
tokio = { version = "0.3.3", features = ["full"] }
log = "0.4.14"
futures = "0.3.6"
async-std = "1.6.5"
async-tls = "0.10.0"
futures-util = "*"
serde_json = "1.0.59"
serde = "1.0.116"
serde_derive = "1.0.116"
async-trait = "0.1.42"
simple_logger = "1.11.0"
chrono = {version = "0.4.19", features = ["serde"]}
uuid = {version = "0.8.2", features = ["serde" , "v4"]}
regex = "1.4.5"
r2d2_sqlite = "0.18.0"
r2d2 = "0.8.9"

[dependencies.fcpv2]
path = "../FCPv2"

[dependencies.async-tungstenite]
version = "0.11.0"
features = ["tokio-runtime", "tokio-native-tls", "async-tls", "async-std"]

